# chatapp

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Button.cpp.6DE123C2E477ACF3.idx  Button.cpp.C4AA56D6F7E42EF8.idx  Button.h.59E95E34D288B1ED.idx  Button.h.D9AB334DC9E5293F.idx  ChatApp.cpp.CF3E4293EC7B9C59.idx  ChatApp.h.91C901281A882FC0.idx  Customs.cpp.9BD7A1BC7382339A.idx  Customs.cpp.E802F1324356F75E.idx  Customs.h.5BAF5F427E749B4D.idx  Customs.h.F2500A58A299961A.idx  Event.cpp.7072166A2C6388C0.idx  Event.cpp.A94E28F9324097D0.idx  Event.h.B130890C4115BFA0.idx  Event.h.C8E1D6501F4ADF6C.idx  Frame.cpp.53829A6AE115CB70.idx  Frame.cpp.9C4A150EFF242873.idx  Frame.h.0F216A2B9C366C9A.idx  Frame.h.C6D2FA6ACBFCF7F6.idx  GUIElement.cpp.3B677F7495CC2EE7.idx  GUIElement.cpp.A61D3FD82B4FCA36.idx  GUIElement.h.521973DED905785A.idx  GUIElement.h.BB2B7C42CCBF715A.idx  SDL.h.4A424C8EDA3C2EB1.idx  SDL_assert.h.CC755DA3A95D2777.idx  SDL_asyncio.h.DD48D3C34DBB78EB.idx  SDL_atomic.h.F70C8B89FB46ADD9.idx  SDL_audio.h.789ABFC366B49C04.idx  SDL_begin_code.h.42D251DB7D2EFB5A.idx  SDL_bits.h.B1BB9A59515412F3.idx  SDL_blendmode.h.50C9A7F35AFB2F6E.idx  SDL_camera.h.61C39BB30C9AB3C8.idx  SDL_clipboard.h.5E7435309FC29630.idx  SDL_close_code.h.53637D3F1C0C36E6.idx  SDL_cpuinfo.h.5ED5BB45B2B219A6.idx  SDL_dialog.h.5C86B403FDC39485.idx  SDL_endian.h.B3FE346EB714829A.idx  SDL_error.h.D96D3E1CF5350747.idx  SDL_events.h.2D9FE6D2CD2983AD.idx  SDL_filesystem.h.82BD8275B9FAFA0F.idx  SDL_gamepad.h.4B72F432411A4210.idx  (+108 more)
include/: ChatApp.h
include/GUI/: Button.h  Customs.h  Event.h  Frame.h  GUIElement.h  Text.h
src/: CMakeLists.txt  ChatApp.cpp  main.cpp
src/GUI/: Button.cpp  Customs.cpp  Event.cpp  Frame.cpp  GUIElement.cpp  Text.cpp
tests/: CMakeLists.txt  window_test.cpp
(+4 files in other folders)
